# Aizel-verifier

./: README.md
common/: Cargo.toml
common/src/: error.rs  lib.rs
common/src/tee/: mod.rs  provider.rs  verifier.rs
verifier/: Cargo.toml
verifier/src/: gcp_claim.rs  gcp_verifier.rs  lib.rs
