[package]
name = "verifier"
version = "0.1.0"
edition = "2021"
authors = ["Will Jiang <jianliiin96@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
url = "2"
log = "0.4"
chrono = "0.4"
jsonwebtoken = "9"
tokio = { version = "1.0", features = ["full"] }
common = { path = "../common" }